<resources>
    <string name="app_name">KSqurez</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">sbmshukla@KSqurez.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="online">Online</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">

        <p><b>Welcome to Our SIP Calling Application</b></p>\n
        <p>At KSquarez Sip App, we are dedicated to providing you with a seamless and high-quality SIP calling experience. Our application leverages the power of Session Initiation Protocol (SIP) technology to enable voice and video calls over the internet, allowing you to connect with your friends, family, and colleagues around the world.</p>\n\n

        <p><b>Our Mission</b></p>\n
        <p>Our mission is to revolutionize the way people communicate by offering a feature-rich and user-friendly SIP calling application. We believe that communication should be effortless, reliable, and accessible to everyone, regardless of their geographical location. With our application, you can break down barriers and connect with your loved ones and business partners at any time and from anywhere in the world.</p>\n\n

        <p><b>Key Features</b></p>\n
        <p><b>Crystal Clear Voice and Video Calls:</b> Our SIP calling application utilizes advanced audio and video codecs to ensure exceptional call quality. Experience conversations that feel as if you are in the same room, whether you\'re making a personal call or conducting a business meeting.</p>\n\n
        <p><b>Instant Messaging:</b> Stay connected beyond voice and video calls with our built-in instant messaging feature. Send text messages, share files, and exchange important information seamlessly within the application.</p>\n\n
        <p><b>Contact Management:</b> Effortlessly manage your contacts within the application. Add, organize, and categorize your contacts to streamline your calling experience.</p>\n\n
        <p><b>Call Recording:</b> Never miss an important detail again. Our application allows you to record your calls, enabling you to revisit conversations or keep a record for future reference.</p>\n\n
        <p><b>Multi-Platform Support:</b> Access your SIP calling application from multiple platforms. Whether you prefer using your smartphone, tablet, or desktop computer, we\'ve got you covered.</p>\n\n
        <p><b>Enhanced Security:</b> We understand the importance of privacy and security when it comes to your communication. Our application employs robust encryption protocols to safeguard your conversations and protect your sensitive information.</p>\n\n

        <p><b>How to Get Started</b></p>\n
        <p><b>Download and Installation:</b> Visit our website or your device\'s app store to download and install our SIP calling application. Follow the simple instructions to get started.</p>\n\n
        <p><b>Account Setup:</b> Create a new account or log in with your existing credentials. Our application will guide you through the setup process, ensuring a smooth onboarding experience.</p>\n\n
        <p><b>Explore and Connect:</b> Once you\'re set up, start exploring the features and functionalities of our SIP calling application. Add contacts, initiate calls, and enjoy the convenience of seamless communication.</p>\n\n

        <p><b>Contact Us</b></p>\n
        <p>We value your feedback and are here to assist you. If you have any questions, suggestions, or need technical support, please don\'t hesitate to reach out to our customer support team. We are available 24\/7 and ready to address any concerns you may have.</p>\n\n\n\n

        <p><b>Thank you for choosing KSquarez Sip App. We look forward to helping you stay connected, anytime and anywhere.</b></p>\n\n

        <p><b>App Version: 1.0.0</b></p>
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="tls">TLS</string>
    <string name="password">Password</string>
    <string name="sip_domain">Sip Domain</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="sip_number">SIP Number</string>
    <string name="dot">.</string>
    <string name="calling">Calling...</string>
    <string name="call_history_list_is_here">Call History List Is Here</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="shubham_shukla">Shubham Shukla</string>
    <string name="current_sip_id">8128618176@KSquarez.com</string>
    <string name="i_about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="go_back_button">Go Back Button</string>
    <string name="about_heading">About</string>
    <string name="_2_today_12_40pm">(2) Today, 12:40pm</string>
    <string name="falguni_maheta">Falguni Maheta</string>
    <string name="sip_8128618176_ksquarez_com">sip:8128618176@ksquarez.com</string>
</resources>