<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AboutFragment">


    <ImageView
        android:id="@+id/iv_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_go_back"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary"
        android:contentDescription="@string/go_back_button" />

    <TextView
        android:id="@+id/tv_about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_heading"
        android:layout_margin="20dp"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
       app:layout_constraintTop_toTopOf="@+id/iv_go_back"
        app:layout_constraintBottom_toBottomOf="@+id/iv_go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:gravity="center_horizontal"
        android:textColor="@color/primary"
        app:layout_constrainedWidth="true"
        android:fontFamily="@font/poppins"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_go_back"/>
</androidx.constraintlayout.widget.ConstraintLayout>